# digitakt-llm

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DIRECTION.md  LICENSE  README.md  TODO.md  VISION.md  pyproject.toml  todo.sh
.claude/: settings.json
.githooks/: README.md  pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust-test.yml  tests.yml
.superpowers/brainstorm/3734-1775798106/content/: activity-panel-layout.html
.superpowers/brainstorm/3734-1775798106/state/: server-stopped
api/: schemas.py  server.py
cli/: commands.py  main.py  tui.py  tui_launcher.py
core/: euclidean.py  events.py  fill_fsm.py  generator.py  injectable_profiles.py  lfo.py  logging_config.py  midi_input.py  midi_utils.py  mutator.py  pattern_snapshot.py  player.py  state.py  tracing.py
crates/digitakt-cli/: Cargo.toml
crates/digitakt-cli/src/: main.rs
crates/digitakt-core/: Cargo.toml
crates/digitakt-core/src/: commands.rs  euclidean.rs  fill_fsm.rs  lfo.rs  lib.rs  pattern.rs  pattern_snapshot.rs  state.rs  types.rs
crates/digitakt-engine/: Cargo.toml
crates/digitakt-engine/src/: events.rs  lib.rs  midi_input.rs  mutator.rs  player.rs
crates/digitakt-generator/: Cargo.toml
crates/digitakt-generator/prompts/: ambient_body.txt  classify_system.txt  cr78_body.txt  help_system.txt  linndrum_body.txt  system_16.txt  system_32.txt  system_8.txt
crates/digitakt-generator/src/: coerce.rs  generator.rs  injectable_profiles.rs  lib.rs  prompts.rs  tracing.rs
crates/digitakt-midi/: Cargo.toml
crates/digitakt-midi/src/: echo.rs  lib.rs  maps.rs  messages.rs  ports.rs
crates/digitakt-server/: Cargo.toml
crates/digitakt-server/src/: app.rs  env_file.rs  lib.rs  schemas.rs
crates/digitakt-server/tests/: server.rs
design/app-icon/: README.md  paper-mcp-build.md
docs/: ROADMAP.md  lfo-v1-design.md  lfo-v1-implementation-plan.md  macos-release.md  sysex-investigation.md  web-ui-debugging.md
docs/plans/: 2026-04-12-v1-implementation.md  2026-04-23-euclidean-ring-design.md  2026-04-23-euclidean-ring-impl.md
docs/specs/: 2026-04-12-v1-design.md
docs/superpowers/plans/: 2026-04-08-digitakt-llm.md  2026-04-10-cp2-music-depth-1.md  2026-04-10-cp3-music-depth-2.md
docs/superpowers/specs/: 2026-04-08-digitakt-llm-design.md  2026-04-09-ui-bpm-randbeat-design.md  2026-04-10-vision-milestones-design.md  2026-04-24-euclidean-mute-ui-design.md
patterns/: first-one.json
scripts/: bundle-macos.sh  install-git-hooks.sh  setup-cloud.sh  setup-dev.sh  startup-tooling.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: test_cc_control.py  test_cc_params.py  test_chain.py  test_commands.py  test_euclidean.py  test_events.py  test_fill_fsm.py  test_generator.py  test_injectable_profiles.py  test_lfo.py  test_logging.py  test_midi_input.py  test_midi_utils.py  test_mutator.py  test_parity.py  test_pattern_snapshot.py  test_player.py  test_player_lfo.py  test_server.py  test_server_chain.py  test_state.py  test_tracing.py  test_tui_launcher.py  test_tui_slash_commands.py
tools/: midi_monitor.py
tui/: package.json
tui/src/: App.tsx  commandParsing.test.ts  commandParsing.ts  euclidMuteUi.test.ts  euclidMuteUi.ts  euclidRing.test.ts  euclidRing.ts  index.tsx  inferPatternLength.test.ts  layout.test.ts  layout.ts  lfoDisplay.ts  theme.ts  trigEditing.test.ts  trigEditing.ts  types.ts
tui/src/components/: ActivityLog.tsx  CCPanel.tsx  ChainPanel.tsx  EuclidGridPanel.tsx  EuclidRingPanel.tsx  EuclidTrackStrip.tsx  FocusRail.tsx  GenerationSummary.tsx  Header.tsx  LfoPanel.preview.tsx  LfoPanel.tsx  PatternGrid.tsx  Prompt.test.ts  Prompt.tsx  StatusBar.tsx  StepGrid.tsx  TrigEditPanel.tsx
tui/src/hooks/: useDigitakt.ts
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  index.tsx
web/src/backend/: client.ts
web/src/components/: Region.tsx
web/src/components/ActivityLog/: ActivityLog.css  ActivityLog.tsx
web/src/components/CmdPanel/: CmdPanel.css  CmdPanel.tsx
web/src/components/FocusRail/: FocusRail.css  FocusRail.tsx
web/src/components/MixPanel/: MixPanel.css  MixPanel.tsx
web/src/components/SeqPanel/: SeqPanel.css  SeqPanel.tsx
web/src/components/StatusBar/: StatusBar.css  StatusBar.tsx
web/src/components/TrigPanel/: TrigPanel.css  TrigPanel.tsx
web/src/design/: constants.ts  helpContent.ts
web/src/design/layout/: LayoutWorkbench.tsx
web/src/design/panels/: ChatCmd.tsx  Chrome.tsx  LfoPanel.tsx  LfoWaveGraph.tsx  Sequencer.tsx  SidePanels.tsx
web/src/design/primitives/: index.tsx
web/src/hooks/: useDigitakt.ts  useKeyboard.ts  useSmoothGlobalStep.ts  useUiState.ts
web/src/lib/: chatDisplay.ts  commandDispatch.ts  condAdapter.ts  lfoAdapter.ts  lfoDisplay.ts  muteUi.ts  slashParsing.ts  tabCycle.ts  viewModel.ts
web/src/styles/: layout.css  theme.css  workbench.css
web/tests/: adapters.test.ts  chatDisplay.test.ts  client.test.ts  keyboardPane.test.ts  lfoDisplay.test.ts  tabCycle.test.ts  useDigitakt.test.tsx
