[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "digitakt-llm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
]

[project.scripts]
digitakt = "cli.tui_launcher:main"

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
