[package]
name = "digitakt-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
digitakt-server = { path = "../crates/digitakt-server" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { workspace = true }

[lib]
name = "digitakt_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "digitakt-tauri"
path = "src/main.rs"
