[package]
name = "digitakt-cli"
description = "digitakt serve CLI for Ink / dev without GUI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "digitakt"
path = "src/main.rs"

[dependencies]
digitakt-server = { path = "../digitakt-server" }
tokio = { workspace = true }
tracing = { workspace = true }
