[package]
name = "digitakt-core"
description = "Pure logic: euclidean, lfo, fill_fsm, commands, pattern_snapshot, state"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
regex = "1"

[dev-dependencies]
rand = { workspace = true }
